﻿version 3.3.0
NOT RELEASED
- removed obsolete operations (fluent interface is the way to go)
- log connection building error, avoid GC TcpClient if building goes bad
- simplified command builder extensions - decoupled builder and mapper
- fixed (again) 100% cpu when linux hosted server disconnect
- modified instrumentation interface: TracingSession is now no more available - use ICluster::QueryTracingSession
  when required
- fixed unsigned short problem with map (and other serialization chunks requiring a ushort)
- interface (non prepared query with params) is ready for binary protocol v2 (but no implementation)
- fixed asynchronous worker shutdown in connection
- default consistency level (see TransportConfig.DefaultConsistencyLevel)
- log error when recovery fails
- moved fluent operations (WithXXX) to ICqlCommand (breaking change)
- strongly typed ICqlCommand and IPropertyBagCommand to avoid misleading operation calls
- placement key only available on non prepared statement on Execute()

version 3.2.2
- fixed issue 49 (https://github.com/pchalamet/cassandra-sharp/issues/49)
- fixed issue 52 (https://github.com/pchalamet/cassandra-sharp/issues/52)
- fixed issue 53 (https://github.com/pchalamet/cassandra-sharp/issues/53)

version 3.2.1
NOT RELEASED
- added releaseNotes to nuget packages

version 3.2.0
- use culture invariant for identifier conversion
- ICqlCommand.Execute & IPreparedQuery.Execute with all parameters are depreacated. Use fluent interface instead
- timeout support for AsFuture()
- fluent interface for queries (introduced ICqlQuery) to allow setting CL, execution flags & hints
  These methods will be removed in 3.3
- fluent interface for building commands
- data transfer tool available in cqlplus (DbCopy) from database (OLEDB) to Cassandra
- no more semicolon at the end of cqlplus command
- ordinal data mapper availability
- refactoring of query commands

version 3.1.4